grades style change
changed style in grades grid to center text more

--- a/style.css
+++ b/style.css
@@ -20,7 +20,10 @@ nav.navigationBar{
     position: fixed;
 }
 
-
+p.margins {
+    margin-top: 10px; 
+    margin-bottom: 10px;
+}
 
 .button{
     background-color: rgb(29, 29, 29);
