--- a/style.css
+++ b/style.css
@@ -100,6 +100,20 @@ p.margins {
 }
 
 
+.paddings{
+    padding-right: 10%;
+    padding-left: 10%;
+}
+
+.page{
+    border: 2px solid black;
+    box-sizing: border-box;
+    box-shadow: 5px 5px 10px black;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 5%;
+}
+
  @media only screen and (max-width: 600px) {
     .font-size-small{
         font-size: 12px;
@@ -123,6 +137,22 @@ p.margins {
         margin-right: 20px;
         margin-bottom: 1.5vw;
     }
+
+    .paddings{
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+
+    .page{
+        border: 2px solid black;
+        box-sizing: border-box;
+        box-shadow: 5px 5px 10px black;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-bottom: 5%;
+    }
+
+    
 
  }
 
